--- a/.env-example
+++ b/.env-example
@@ -6,6 +6,11 @@ MONGO_ROOT_PASSWORD=password123
 ME_BASIC_AUTH_USER=user
 ME_BASIC_AUTH_PASSWORD=password
 
+# --- Open WebUI ---
+OPEN_WEBUI_PORT=3000
+# Generate a secure key (random string) to keep sessions valid
+WEBUI_SECRET_KEY=random_secret_string
+
 # --- Ports ---
 MONGO_PORT=27017
 MONGO_EXPRESS_PORT=8081
